<resources>
    <string name="app_name">CCTV新闻</string>
    <string name="rbnews">首页</string>
    <string name="rbtimeline">时间链</string>
    <string name="rbtv">电视+</string>
    <string name="rbdiscover">发现</string>
    <string name="rbuser">我</string>
    <string name="usercenter">用户中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
